--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,24 @@
             <version>3.11.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.15</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jfairy/jfairy -->
+        <dependency>
+            <groupId>org.jfairy</groupId>
+            <artifactId>jfairy</artifactId>
+            <version>0.3.0</version>
+        </dependency>
+
+
     </dependencies>
 </project>
