--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,17 @@
             <artifactId>jfairy</artifactId>
             <version>0.3.0</version>
         </dependency>
-
     </dependencies>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.21.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
